# sole

./: .gitignore  CMakeLists.txt  sole.cpp  tests.cc
include/sole/: sole.hpp
